--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -7,6 +8,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>lab4project</name>
   <url>http://maven.apache.org</url>
+  <Properties>
+	<maven.compiler.source>17</maven.compiler.source>
+	<maven.compiler.target>17</maven.complier.target>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -15,4 +20,19 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <build>
+	<plugins>
+	 <plugins>
+	 <groupID>org.apache.maven.plugins</groupId>
+	 <artifactID>maven-compiler-plugin</arttifactID>
+	 <version>3.8.1</version>
+	 <configuration>
+	   <source>17<</source>
+	   <target>17</target>
+	 </configuration>
+	 </plugins>
+	</plugins>
+ </build>	
 </project>
+
+
