--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 	 <artifactID>maven-compiler-plugin</arttifactID>
 	 <version>3.8.1</version>
 	 <configuration>
-	   <source>17<</source>
+	   <source>17</source>
 	   <target>17</target>
 	 </configuration>
 	 </plugins>
