--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <version>1.0-SNAPSHOT</version>
   <name>lab4project</name>
   <url>http://maven.apache.org</url>
-  <Properties>
+  <properties>
 	<maven.compiler.source>17</maven.compiler.source>
 	<maven.compiler.target>17</maven.complier.target>
   </properties>
