--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -9,8 +8,8 @@
   <name>lab4project</name>
   <url>http://maven.apache.org</url>
   <properties>
-	<maven.compiler.source>17</maven.compiler.source>
-	<maven.compiler.target>17</maven.complier.target>
+   <maven.compiler.source>17</maven.compiler.source>
+   <maven.compiler.target>17</maven.compiler.target>
   </properties>
   <dependencies>
     <dependency>
@@ -21,18 +20,16 @@
     </dependency>
   </dependencies>
   <build>
-	<plugins>
-	 <plugins>
-	 <groupID>org.apache.maven.plugins</groupId>
-	 <artifactID>maven-compiler-plugin</arttifactID>
-	 <version>3.8.1</version>
-	 <configuration>
-	   <source>17</source>
-	   <target>17</target>
-	 </configuration>
-	 </plugins>
-	</plugins>
- </build>	
+   <plugins>
+    <plugin>
+     <groupId>org.apache.maven.plugins</groupId>
+     <artifactId>maven-compiler-plugin</artifactId>
+     <version>3.8.1</version>
+     <configuration>
+      <source>17</source>
+      <target>17</target>
+     </configuration>
+    </plugin>
+   </plugins>
+  </build>
 </project>
-
-
